--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,9 @@ img::selection 		{background: transparent;}
 img::-moz-selection	{background: transparent;}
 body {-webkit-tap-highlight-color: rgb(255,255,158);}
 
-
+code {
+	word-wrap: break-word;
+}
 
 /*		Default Layout: 992px. 
 		Gutters: 24px.
