--- a/assets/themes/mark-reid/css/screen.css
+++ b/assets/themes/mark-reid/css/screen.css
@@ -50,14 +50,14 @@ h1,h2,h3,h4 {
 }
 h1 { margin-bottom: 1em;
 	color:#990000;
-	font-size:1.5em; 
 }
 h2 {
 	font-size: 100%;
-	line-height: 1.5em;
+	line-height: 1.8em;
+	font-size:1.5em; 
 	margin:1.5em 0 1.5em 0;
 	font-weight:bold;
-	color:#66FF00
+	color:#47B300
 }
 h3 {
 	color:#7D7D7D
