--- a/assets/themes/mark-reid/css/screen.css
+++ b/assets/themes/mark-reid/css/screen.css
@@ -49,7 +49,7 @@ h1,h2,h3,h4 {
 	text-shadow: 2px 2px 3px rgb(170, 170, 170);
 }
 h1 {
-	font-size:1.5em;
+	font-size:1.8em;
 	margin-bottom: 1em;
 	color:#990000;
 }
@@ -72,6 +72,12 @@ hr {
 	margin: 1.46em 0 0 0;
 }
 
+#table {
+border : 1px solid silver;
+}
+#table  td {
+border : 1px solid silver;
+}
 sup { line-height: 1ex; }
 
 #site {
