--- a/assets/themes/mark-reid/css/screen.css
+++ b/assets/themes/mark-reid/css/screen.css
@@ -72,10 +72,10 @@ hr {
 	margin: 1.46em 0 0 0;
 }
 
-#table {
+table#table {
 border : 1px solid silver;
 }
-#table  td {
+table#table  td {
 border : 1px solid silver;
 }
 sup { line-height: 1ex; }
