--- a/assets/themes/mark-reid/css/screen.css
+++ b/assets/themes/mark-reid/css/screen.css
@@ -72,11 +72,15 @@ hr {
 	margin: 1.46em 0 0 0;
 }
 
-table#table {
-border : 1px solid silver;
-}
-table#table  td {
-border : 1px solid silver;
+table#table_border {
+	border-width:1px; 
+	border-style:solid; 
+	border-color:black;
+	}
+table#table_border  td {
+	border-width:1px; 
+	border-style:solid; 
+	border-color:black;
 }
 sup { line-height: 1ex; }
 
