--- a/assets/themes/mark-reid/css/screen.css
+++ b/assets/themes/mark-reid/css/screen.css
@@ -73,14 +73,21 @@ hr {
 }
 
 table.table_border {
-	border-width:1px; 
 	border-style:solid; 
-	border-color:black;
+	border-color:silver;
+	padding:0;
+	margin:0;
 	}
 table.table_border  td {
+	border-left-width:1px; 
+	border-top-width:0px; 
+	border-right-width:1px; 
+	border-bottom-width:0px; 
 	border-width:1px; 
 	border-style:solid; 
-	border-color:black;
+	border-color:silver;
+	padding:0;
+	margin:0;
 }
 sup { line-height: 1ex; }
 
