css : text in td

--- a/assets/themes/mark-reid/css/screen.css
+++ b/assets/themes/mark-reid/css/screen.css
@@ -73,6 +73,7 @@ hr {
 }
 
 table.table_border {
+	border-width:1px; 
 	border-style:solid; 
 	border-color:silver;
 	padding:0;
@@ -88,6 +89,8 @@ table.table_border  td {
 	border-color:silver;
 	padding:0;
 	margin:0;
+	font-family: Palatino,georgia,"times new roman",serif;
+	font-size: 0.8em;
 }
 sup { line-height: 1ex; }
 
