--- a/assets/themes/mark-reid/css/screen.css
+++ b/assets/themes/mark-reid/css/screen.css
@@ -59,7 +59,7 @@ h2 {
 	font-size:1.2em; 
 	margin:1.5em 0 1.5em 0;
 	font-weight:bold;
-	color:#47B300
+	color:#003D99
 }
 h3 {
 	line-height:1.3em; 
